concept:formulized & realization:start of win needs to be correction

--- a/main.tex
+++ b/main.tex
@@ -617,7 +617,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:diff_sync}{
 name=$t_{\mathit{diff\_sync}}$ ,
-description={Target time difference between rf systems of two synchrotrons in the format of time},
+description={Target time difference between the synchronization frequencies of two synchrotrons in the format of time},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:two_TOF}{
@@ -1217,11 +1217,11 @@ description={The time deviation between the transfer latencies of two consecutiv
 
 \newglossaryentry{glos:broadcast}{
 name={broadcast},
-description={The frame is intended to be received and processed by every timing node on the WR network}
+description={The frame is intended to be received and processed by every FEC on the WR network}
 }
 \newglossaryentry{glos:unicast}{
 name={unicast},
-description={The frame is intended to be received and processed by a specified timing node on the WR network}
+description={The frame is intended to be received and processed by a specified FEC on the WR network}
 }
 \newglossaryentry{glos:trigger_scu}{
 name={Trigger SCU},
