--- a/reference.bib
+++ b/reference.bib
@@ -441,6 +441,21 @@
 	file = {[PDF] anl.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\22DK57IQ\\Wang - 1991 - Design of kicker magnet and power supply unit for .pdf:application/pdf}
 }
 
+@misc{ros_sis18_2008,
+	title = {{SIS}18 {Sektoren} {Technische} {Zeichnungen} und {Fotografien}},
+	author = {Roß, Jana},
+	month = jan,
+	year = {2008}
+}
+
+@misc{udo_detailed_2014,
+	title = {Detailed specification of the {SIS}100 injection kicker magnets and their pulse power supplies. {PSP} 2.8.5.1},
+	publisher = {GSI internal document},
+	author = {Udo, Blell},
+	month = nov,
+	year = {2014}
+}
+
 @article{klingbeil_new_2011,
 	title = {New digital low-level rf system for heavy-ion synchrotrons},
 	volume = {14},
